# my-mock-pkg

./: mkdocs.yml  pyproject.toml
docs/: example.md  index.md
src/my_mock_pkg/: __init__.py  example.py
