[project]
name = "my-mock-pkg"
version = "0.1.0"
authors = [
  { name="ss249tp", email="ss249.tp@gmail.com" },
]
description = "A small mock package."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
]

[project.urls]
Homepage = "https://github.com/ss249tp/my-mock-pkg"
Issues = "https://github.com/ss249tp/my-mock-pkg/issues"
